--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -51,12 +51,31 @@
                     android:textSize="28sp"
                     android:textStyle="bold"/>
 
-                <com.zkhaider.bernievshillary.widgets.CircleIndicatorsView
-                    android:id="@+id/ciDots"
-                    android:layout_width="match_parent"
-                    android:layout_height="16dp"
+                <FrameLayout
+                    android:id="@+id/flCircleIndicatorsContainer"
                     android:layout_weight="1"
-                    app:numCircles="10"/>
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.zkhaider.bernievshillary.widgets.CircleIndicatorsView
+                        android:id="@+id/ciDots"
+                        android:paddingTop="8dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="16dp"
+                        app:numCircles="10"/>
+
+                    <TextView
+                        android:id="@+id/tvChangeYourAnswer"
+                        android:visibility="invisible"
+                        android:textColor="@android:color/white"
+                        android:text="@string/change_your_answer"
+                        android:layout_gravity="top|center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </FrameLayout>
 
             </LinearLayout>
 
@@ -68,7 +87,7 @@
                 android:layout_weight="10">
 
                 <Button
-                    android:id="@+id/tvNotSure"
+                    android:id="@+id/btNotSure"
                     android:layout_width="100dp"
                     android:layout_height="56dp"
                     android:layout_gravity="center_horizontal|top"
@@ -77,7 +96,366 @@
                     android:text="@string/not_sure"
                     android:textColor="@android:color/tertiary_text_light"/>
 
+                <LinearLayout
+                    android:id="@+id/llLegend"
+                    android:weightSum="3"
+                    android:padding="16dp"
+                    android:visibility="invisible"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/llAgree"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/ivAgree"
+                            android:src="@drawable/icon_agree"
+                            android:layout_width="14dp"
+                            android:layout_height="14dp"/>
+
+                        <TextView
+                            android:id="@+id/tvAgreeWithYou"
+                            android:textColor="#54B513"
+                            android:textStyle="bold"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginStart="4dp"
+                            android:textSize="10sp"
+                            android:text="@string/agrees_with_you"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/llDisagree"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/ivDisagree"
+                            android:src="@drawable/icon_disagree"
+                            android:layout_width="14dp"
+                            android:layout_height="14dp"/>
+
+                        <TextView
+                            android:id="@+id/tvDisagreeWithYou"
+                            android:textColor="#D0021B"
+                            android:textStyle="bold"
+                            android:textSize="10sp"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginStart="8dp"
+                            android:text="Disagrees with you"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/llNeutral"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/ivNeutral"
+                            android:src="@drawable/icon_neutral"
+                            android:layout_width="14dp"
+                            android:layout_height="14dp"/>
+
+                        <TextView
+                            android:id="@+id/tvNeutralWithYou"
+                            android:textColor="#7F7F7F"
+                            android:textStyle="bold"
+                            android:textSize="10sp"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginStart="8dp"
+                            android:text="Neutral"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
             </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/llPositionsContainer"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/llBernieContainer"
+                    android:orientation="vertical"
+                    android:alpha="0.0"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Top Header -->
+
+                    <LinearLayout
+                        android:id="@+id/llBernieHeader"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/ivBernieCircle"
+                            android:src="@drawable/bernie_circle"
+                            android:layout_width="72dp"
+                            android:layout_height="72dp"/>
+
+                        <TextView
+                            android:id="@+id/tvBernieName"
+                            android:text="@string/bernie"
+                            android:textSize="38sp"
+                            android:textStyle="bold"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                    <!-- Past Current Positions View -->
+
+                    <LinearLayout
+                        android:id="@+id/llBerniePositions"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/llPastRecord"
+                            android:layout_marginTop="16dp"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/ivPastRecordIcon"
+                                android:src="@drawable/icon_disagree"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"/>
+
+                            <LinearLayout
+                                android:id="@+id/llPasRecordText"
+                                android:orientation="vertical"
+                                android:layout_marginLeft="16dp"
+                                android:layout_marginStart="16dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/tvPastRecord"
+                                    android:text="@string/past_record"
+                                    android:textStyle="bold"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                                <TextView
+                                    android:id="@+id/tvPastRecordDetail"
+                                    android:text="Because the debate limited to medical merijuana until recently, neither candidate had a substantial"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/llCurrentPosition"
+                            android:layout_marginTop="16dp"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/ivCurrentPositionIcon"
+                                android:src="@drawable/icon_neutral"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"/>
+
+                            <LinearLayout
+                                android:id="@+id/llCurrentPositionText"
+                                android:orientation="vertical"
+                                android:layout_marginLeft="16dp"
+                                android:layout_marginStart="16dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/tvCurrentPosition"
+                                    android:text="@string/current_position"
+                                    android:textStyle="bold"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                                <TextView
+                                    android:id="@+id/tvCurrentPositionDetail"
+                                    android:text="Because the debate limited to medical merijuana until recently, neither candidate had a substantial"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llHillaryContainer"
+                    android:orientation="vertical"
+                    android:alpha="0.0"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Top Header -->
+
+                    <LinearLayout
+                        android:id="@+id/llHillaryHeader"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/ivHillaryCircle"
+                            android:src="@drawable/hillary_circle"
+                            android:layout_width="72dp"
+                            android:layout_height="72dp"/>
+
+                        <TextView
+                            android:id="@+id/tvHillaryName"
+                            android:text="@string/hillary"
+                            android:textSize="38sp"
+                            android:textStyle="bold"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                    <!-- Past Current Positions View -->
+
+                    <LinearLayout
+                        android:id="@+id/llHillaryPositions"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/llHillaryPastRecord"
+                            android:layout_marginTop="16dp"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/ivHillaryPastRecordIcon"
+                                android:src="@drawable/icon_disagree"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"/>
+
+                            <LinearLayout
+                                android:id="@+id/llHillaryPasRecordText"
+                                android:orientation="vertical"
+                                android:layout_marginLeft="16dp"
+                                android:layout_marginStart="16dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/tvHillaryPastRecord"
+                                    android:text="@string/past_record"
+                                    android:textStyle="bold"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                                <TextView
+                                    android:id="@+id/tvHillaryPastRecordDetail"
+                                    android:text="Because the debate limited to medical merijuana until recently, neither candidate had a substantial"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/llHillaryCurrentPosition"
+                            android:layout_marginTop="16dp"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/ivHillaryCurrentPositionIcon"
+                                android:src="@drawable/icon_neutral"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"/>
+
+                            <LinearLayout
+                                android:id="@+id/llHillaryCurrentPositionText"
+                                android:orientation="vertical"
+                                android:layout_marginLeft="16dp"
+                                android:layout_marginStart="16dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/tvHillaryCurrentPosition"
+                                    android:text="@string/current_position"
+                                    android:textStyle="bold"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                                <TextView
+                                    android:id="@+id/tvHillaryCurrentPositionDetail"
+                                    android:text="Because the debate limited to medical merijuana until recently, neither candidate had a substantial"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
