--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,6 +2,8 @@
 <resources>
     
     <declare-styleable name="TriangleBackgroundView">
+        <attr name="ratio1" format="float" />
+        <attr name="ratio2" format="float" />
         <attr name="backgroundColor" format="color" />
         <attr name="foregroundColor" format="color" />
     </declare-styleable>
