Rays now animating properly

--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -20,6 +20,9 @@
         android:paddingTop="32dp"
         android:paddingRight="32dp"
         android:paddingEnd="32dp"
+        android:layout_marginLeft="-16dp"
+        android:layout_marginStart="-16dp"
+        android:layout_marginBottom="-32dp"
         android:scaleType="centerCrop"
         android:cropToPadding="false"
         android:scaleY="1.9"
