--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -199,6 +199,7 @@
 
             <LinearLayout
                 android:id="@+id/llPositionsContainer"
+                android:layout_marginTop="32dp"
                 android:orientation="vertical"
                 android:visibility="gone"
                 android:layout_width="match_parent"
