--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -61,6 +61,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tvHigherScore"
             android:textSize="72sp"
             android:textColor="@android:color/white"
             android:text="80%"
@@ -124,6 +125,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tvLowerScore"
             android:textSize="56sp"
             android:textColor="@android:color/white"
             android:text="20%"
