--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -74,6 +74,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:id="@+id/tvWinner"
             android:textSize="24sp"
             android:textColor="@android:color/white"
             android:text="@string/bernie_sanders"
@@ -139,6 +140,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:id="@+id/tvLoser"
             android:textSize="18sp"
             android:textColor="@android:color/white"
             android:text="@string/hillary_clinton"
