--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -4,6 +4,7 @@
              android:layout_height="match_parent"
              android:clipToPadding="false"
              android:clipChildren="false"
+             android:id="@+id/flResults"
              xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.zkhaider.bernievshillary.widgets.TriangleBackgroundView
@@ -152,5 +153,40 @@
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_margin="8dp"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <com.zkhaider.bernievshillary.widgets.AutofitTextView
+            android:id="@+id/tvBestMatch"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="36sp"
+            android:maxLines="1"
+            android:gravity="center_horizontal"
+            android:text="@string/your_best_match"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tvTapToContinue"
+            android:text="@string/tap_to_continue"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <com.zkhaider.bernievshillary.widgets.BlurringView
+        android:id="@+id/bvBlur"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
