--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/ivBernieBig"
             android:src="@drawable/bernie_big"
             android:layout_marginLeft="-56dp"
             android:layout_marginStart="-56dp"
@@ -47,6 +48,7 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/ivHillaryBig"
             android:src="@drawable/hillary_big"
             android:layout_weight="1"
             android:layout_marginEnd="-56dp"
