--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -111,7 +111,7 @@
             android:layout_weight="1"
             android:layout_marginEnd="-24dp"
             android:layout_marginRight="-24dp"
-            android:layout_marginBottom="-100dp"
+            android:layout_marginBottom="@dimen/loser_margin_bottom"
             android:layout_width="150dp"
             android:layout_height="0dp"/>
 
